# c-pico-project-template

./: .gitattributes  CMakeLists.txt  README.md  build.sh  init.sh  populate_repo.sh  populate_submodules_on_clone.sh  ws2812.pio
